--- a/CarRentalSystem/about us.html
+++ b/CarRentalSystem/about us.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Us - Car Rental</title>
-  <link rel="stylesheet" href="CarRentalSystem/css/about us.css">
+  <link rel="stylesheet" href="../CarRentalSystem/css/about us.css">
 </head>
 <body>
   <div class="container">
@@ -44,24 +44,24 @@
     <!-- Table for advantages -->
     <table class="features-table">
       <tr>
-        <td><img src="CarRentalSystem/images/WhatsApp Image 2025-04-16 at 4.56.55 PM.jpeg" alt="trust" /></td>
+        <td><img src="../CarRentalSystem/images/WhatsApp Image 2025-04-16 at 4.56.55 PM.jpeg" alt="trust" /></td>
         <td><p><b>1- Your Trusted Car Rental Partner:</b> We don’t just provide vehicles — we provide peace of mind. From the moment you land on our website or step into one of our offices, we are committed to giving you a rental experience that is seamless, trustworthy, and reliable. We understand how important it is to feel secure and supported when you’re renting a vehicle, especially in unfamiliar places or during important trips. That’s why our team goes the extra mile to ensure transparency, flexibility, and top-tier customer service at every stage.</p></td>
-        <td><img src="CarRentalSystem/images/WhatsApp Image 2025-04-16 at 6.13.58 PM.jpeg" alt="trust" /></td>
+        <td><img src="../CarRentalSystem/images/WhatsApp Image 2025-04-16 at 6.13.58 PM (1).jpeg" alt="trust" /></td>
       </tr>
       <tr>
-        <td><img src="CarRentalSystem/images/WhatsApp Image 2025-04-16 at 6.13.58 PM (1).jpeg" alt="Driver and without Driver" /></td>
+        <td><img src="../CarRentalSystem/images/WhatsApp Image 2025-04-16 at 6.13.58 PM.jpeg" alt="Driver and without Driver" /></td>
         <td><p><b>2- Rent With or Without a Driver:</b> We believe in giving you full control over your travel experience. That’s why we offer both self-drive and chauffeur-driven rental options. If you prefer the freedom to explore at your own pace and make spontaneous stops, our self-drive option is perfect for you. With easy pick-up and return processes, minimal paperwork, and well-maintained vehicles, you’ll be on the road in no time. On the other hand, if you’d rather relax and focus on your meetings, sightseeing, or family time, you can book one of our experienced and professional drivers.</p></td>
-        <td><img src="CarRentalSystem/images/WhatsApp Image 2025-04-16 at 6.14.22 PM.jpeg" alt="Driver and without Driver" /></td>
+        <td><img src="../CarRentalSystem/images/WhatsApp Image 2025-04-16 at 6.14.22 PM.jpeg" alt="Driver and without Driver" /></td>
       </tr>
       <tr>
-        <td><img src="CarRentalSystem/images/WhatsApp Image 2025-04-16 at 7.41.50 PM.jpeg" alt="price and quality" /></td>
+        <td><img src="../CarRentalSystem/images/WhatsApp Image 2025-04-16 at 7.41.50 PM.jpeg" alt="price and quality" /></td>
         <td><p><b>3- Affordable Prices, Premium Quality:</b> Our pricing philosophy is simple: offer top-quality service at competitive, transparent rates. We understand that customers want value without compromising on comfort or safety, and that’s exactly what we deliver. Whether you need an economy car for a quick city ride or a premium SUV for a long road trip, we’ve got options for every budget. Unlike many competitors, we don’t believe in hidden fees or last-minute surprises. Our pricing is clear, upfront, and tailored to suit your rental duration and needs. We also offer discounts on long-term rentals, corporate packages, and loyalty rewards for our returning customers.</p></td>
-        <td><img src="CarRentalSystem/images/WhatsApp Image 2025-04-16 at 7.41.50 PM (1).jpeg" alt="price and quality" /></td>
+        <td><img src="../CarRentalSystem/images/WhatsApp Image 2025-04-16 at 7.41.50 PM (1).jpeg" alt="price and quality" /></td>
       </tr>
       <tr>
-        <td><img src="CarRentalSystem/images/WhatsApp Image 2025-04-16 at 7.41.49 PM.jpeg" alt="Wide Range of Vehicles for Every Need" /></td>
+        <td><img src="../CarRentalSystem/images/WhatsApp Image 2025-04-16 at 7.41.49 PM.jpeg" alt="Wide Range of Vehicles for Every Need" /></td>
         <td><p><b>4- Wide Range of Vehicles for Every Need:</b> No two trips are alike, and that’s why we offer a diverse fleet of vehicles to meet every customer’s needs. Whether you’re a solo traveler, a couple on a romantic getaway, a family on vacation, or a company in need of transportation for employees, we have the right car for you. Choose from compact hatchbacks for easy city driving, sleek sedans for comfort, powerful SUVs for adventure, or luxury models for a stylish ride. Each vehicle comes equipped with the latest safety and comfort features, including air conditioning, Bluetooth connectivity, GPS navigation (optional), and ample luggage space.</p></td>
-        <td><img src="CarRentalSystem/images/WhatsApp Image 2025-04-16 at 7.41.49 PM (1).jpeg" alt="Wide Range of Vehicles for Every Need" /></td>
+        <td><img src="../CarRentalSystem/images/WhatsApp Image 2025-04-16 at 7.41.49 PM (1).jpeg" alt="Wide Range of Vehicles for Every Need" /></td>
       </tr>
     </table>
   </div>
